# mcp-sentinel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEMO.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  README.md  THREAT_MODEL.md
.claude/skills/marine-corps-protocol/: SKILL.md
.claude/skills/pixel-marmalade-protocol/: SKILL.md
config/: sentinel.example.toml
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: main.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: config.rs  error.rs  lib.rs  sentinel.rs  tests.rs  verdict.rs
crates/sentinel-core/tests/: integration.rs  threat_scenarios.rs
crates/sentinel-council/: Cargo.toml
crates/sentinel-council/src/: consensus.rs  council.rs  error.rs  lib.rs  waluigi.rs
crates/sentinel-council/src/evaluator/: mod.rs  triad.rs
crates/sentinel-firewall/: Cargo.toml
crates/sentinel-firewall/src/: canary.rs  cdr.rs  firewall.rs  lib.rs  models.rs  perplexity.rs
crates/sentinel-monitor/: Cargo.toml
crates/sentinel-monitor/src/: cycle.rs  error.rs  flush.rs  gas.rs  lib.rs  monitor.rs
crates/sentinel-monitor/tests/: integration.rs
crates/sentinel-registry/: Cargo.toml
crates/sentinel-registry/src/: canonicalize.rs  drift.rs  lib.rs  merkle.rs  models.rs  registry.rs  storage.rs  tests.rs
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: ConfigPanel.jsx  MetricsPanel.jsx  StatusPanel.jsx  ThreatLog.jsx  VerdictFeed.jsx
proxy/: doc.go  go.mod  main.go
proxy/cmd/proxy/: main.go
proxy/jsonrpc/: jsonrpc.go  jsonrpc_test.go
proxy/middleware/: middleware.go
proxy/router/: router.go  router_test.go
proxy/sentinel/: ffi.go  sentinel.go  stub.go
proxy/transport/: transport.go
