[workspace]
resolver = "2"
members = [
    "crates/sentinel-core",
    "crates/sentinel-firewall",
    "crates/sentinel-registry",
    "crates/sentinel-monitor",
    "crates/sentinel-council",
    "crates/sentinel-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pixelmarmalade/mcp-sentinel"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
