[package]
name = "sentinel-council"
version.workspace = true
edition.workspace = true

[dependencies]
# Note: sentinel-core depends on this crate, not the other way around
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json = "1"
