[package]
name = "sentinel-firewall"
version.workspace = true
edition.workspace = true

[dependencies]
sentinel-core = { path = "../sentinel-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
regex = "1.10"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
