[package]
name = "sentinel-firewall"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Haltiwanger <kevin@pixelmarmalade.com>"]
description = "Semantic Firewall - Prompt injection detection and content sanitization"
license = "MIT"
repository = "https://github.com/pixelmarmalade/mcp-sentinel"
keywords = ["security", "mcp", "prompt-injection", "ai-safety"]

[dependencies]
# Note: sentinel-core depends on this crate, not the other way around
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
regex = "1.10"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
