[package]
name = "sentinel-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
# Note: sentinel-core depends on this crate, not the other way around
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
